tests/macro-tests/cases/property/invalid_input_pattern.stderr
error: property input can only have a simple ident
 --> cases/property/invalid_input_pattern.rs:4:45
  |
4 | pub fn invalid_destruct(child: impl IntoUiNode, (a, b): (bool, u8)) -> UiNode {
  |                                             ^^^^^^

error: property input can only have `impl OneTrait` types
 --> cases/property/invalid_input_pattern.rs:4:53
  |
4 | pub fn invalid_destruct(child: impl IntoUiNode, (a, b): (bool, u8)) -> UiNode {
  |                                                     ^^^^^^^^^^
